home page creating process

--- a/src/assets/sass/bases/_bases.scss
+++ b/src/assets/sass/bases/_bases.scss
@@ -1,1 +1,11 @@
-@import "variables.scss"
+@import "variables.scss";
+@import "icons.scss";
+@import "utils.scss";
+
+p{
+  color: white;
+}
+
+h2{
+  color: white;
+}
