--- a/src/templates/pages/en/default.hbs
+++ b/src/templates/pages/en/default.hbs
@@ -1,4 +1,16 @@
-<div class="container">
-  <span>Konteineris</span>
+<div class="background">
+  <div class="bg-image">
+    <div class="bg-image__description perfect-center">
+      <h2>It's Always Tea Time</h2>
+      <h2>With Bloom's Herbal Tea</h2>
+      <button type="button" class="btn btn-outline-secondary">SHOP NOW</button>
+    </div>
+  </div>
+  <div class="new-arrivals">
+
+  </div>
+  <div class="blog-page">
+
+  </div>
 
 </div>
