--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -1,1 +1,39 @@
-<footer></footer>
+<footer>
+  <div class="first-section">
+    <ul class="get-to-know">
+      <li>Get to Know Bloom's Tea Better</li>
+      <li>Shop</li>
+      <li>Extras</li>
+      <li>About</li>
+      <li>Blog</li>
+      <li>Contact</li>
+    </ul>
+    <ul class="Help">
+      <li>Help</li>
+      <li>FAQ</li>
+      <li>Shipping & Returns</li>
+      <li>Store Policy</li>
+      <li>Payment Methods</li>
+    </ul>
+    <ul>
+      <li>Follow Us</li>
+      <li>Facebook</li>
+      <li>Instagram</li>
+      <li>Pinterest</li>
+    </ul>
+  </div>
+  <div class="second-section">
+    <a href="#">Visit Our Stores</a>
+    <span>Customer service: 123-456-7890</span>
+    <span>
+      <form>
+        <div class="form-group">
+          <label for="formGroupExampleInput">Subscribe Now</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Email address">
+        </div>
+      </span>
+  </div>
+  <div class="third-section">
+    ©2023 by Bloom's Tea. Proudly created with Wix.com
+  </div>
+</footer>
