--- a/src/templates/partials/navbar.hbs
+++ b/src/templates/partials/navbar.hbs
@@ -1,85 +1,71 @@
 <div class="topbar">
   <nav class="nav-bar nav-bar--left">
-    <ul class="nav-bar__lists">
+    <ul class="nav-bar__lists nav-bar--left__lists">
       <li>
-        <a href="#">
-          <div class="">
-            <div class="">
-              <p>Teas</p>
-            </div>
-          </div>
+        <a class="nav-bar__lists__link" href="#">
+          <p>Teas</p>
         </a>
       </li>
       <li>
-        <a href="#">
-          <div class="">
-            <div class="">
-              <p>Extras</p>
-            </div>
-          </div>
+        <a class="nav-bar__lists__link" href="#">
+          <p>Extras</p>
         </a>
       </li>
       <li>
-        <a href="#">
-          <div class="">
-            <div class="">
-              <p>About</p>
-            </div>
-          </div>
+        <a class="nav-bar__lists__link" href="#">
+          <p>About</p>
         </a>
       </li>
       <li>
-        <a href="#">
-          <div class="">
-            <div class="">
-              <p>Blog</p>
-            </div>
-          </div>
+        <a class="nav-bar__lists__link" href="#">
+          <p>Blog</p>
         </a>
       </li>
       <li>
-        <a href="#">
-          <div class="">
-            <div class="">
-              <p>Contact</p>
-            </div>
-          </div>
+        <a class="nav-bar__lists__link" href="#">
+          <p>Contact</p>
         </a>
       </li>
     </ul>
   </nav>
   <nav class="nav-bar nav-bar--center">
     <ul class="nav-bar__lists">
-      <li>BLOOM'S TEA</li>
+      <li>Nepal's tea</li>
     </ul>
   </nav>
   <nav class="nav-bar nav-bar--right">
     <ul class="nav-bar__lists nav-bar--right__lists">
       <li>
         <a href="#">
-          <div class="">
-            FB
-            <img src="" alt="">
+          <div class="facebook-logo">
+            <svg class="svg-icon">
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#fbLogo"></use>
+            </svg>
           </div>
         </a>
       </li>
       <li>
         <a href="#">
-          <div class="">
-            INSTA
-            <img src="" alt="">
-          </div>
+          <svg class="svg-icon">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagramLogo"></use>
+          </svg>
         </a>
       </li>
       <li>
         <a href="#">
-          <div class="">
-            PINT
-            <img src="" alt="">
-          </div>
+          <svg class="svg-icon">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#pinterestLogo"></use>
+          </svg>
         </a>
       </li>
-      <li>CHART</li>
+
+      <li>
+        <a href="#">
+          <svg class="svg-icon">
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#shoppingBag"></use>
+          </svg>
+        </a>
+      </li>
     </ul>
   </nav>
 
