--- a/src/assets/sass/partials/_navbar.scss
+++ b/src/assets/sass/partials/_navbar.scss
@@ -7,15 +7,16 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  border-bottom: solid 2px $topBarBorderColor;
   .nav-bar{
     height: $nav-height;
-    background: $default-bg;
     width: 100%;
     width: calc(100% - 0px);
     height: calc(100% - 0px);
     white-space: nowrap;
     overflow: visible;
     position: relative;
+    padding-top: 24px;
     &__lists{
       list-style: none;
       display: -webkit-box;
@@ -32,11 +33,25 @@
     }
   }
   .nav-bar--left{
+    &__lists{
+      a{
+        text-decoration: none;
+        }
+
+      p:hover {
+          color: gold;
+          -webkit-transition: 0.3s;
+          transition: 0.3s;
+      }
+    }
     -webkit-box-flex: 2;
         -ms-flex: 2;
             flex: 2;
   }
   .nav-bar--center{
+    padding-left: 56px;
+    border-left: solid 2px $topBarBorderColor;
+    border-right: solid 2px $topBarBorderColor;
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
@@ -45,7 +60,7 @@
     -webkit-box-flex: 2;
         -ms-flex: 2;
             flex: 2;
-    padding: 0 20px 0 0px;
+    padding-right: 20px;
     &__lists{
       -webkit-box-pack: end;
           -ms-flex-pack: end;
