--- a/src/templates/partials/footer.hbs
+++ b/src/templates/partials/footer.hbs
@@ -1,39 +1,61 @@
 <footer>
-  <div class="first-section">
-    <ul class="get-to-know">
-      <li>Get to Know Bloom's Tea Better</li>
-      <li>Shop</li>
-      <li>Extras</li>
-      <li>About</li>
-      <li>Blog</li>
-      <li>Contact</li>
-    </ul>
-    <ul class="Help">
-      <li>Help</li>
-      <li>FAQ</li>
-      <li>Shipping & Returns</li>
-      <li>Store Policy</li>
-      <li>Payment Methods</li>
-    </ul>
-    <ul>
-      <li>Follow Us</li>
-      <li>Facebook</li>
-      <li>Instagram</li>
-      <li>Pinterest</li>
-    </ul>
-  </div>
-  <div class="second-section">
-    <a href="#">Visit Our Stores</a>
-    <span>Customer service: 123-456-7890</span>
-    <span>
-      <form>
-        <div class="form-group">
-          <label for="formGroupExampleInput">Subscribe Now</label>
-          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Email address">
+  <div class="page-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <ul class="get-to-know">
+            <li>Get to Know Bloom's Tea Better</li>
+            <li>Shop</li>
+            <li>Extras</li>
+            <li>About</li>
+            <li>Blog</li>
+            <li>Contact</li>
+            <li>
+              <a href="#">Visit Our Stores</a>
+            </li>
+            <li>Customer service: 123-456-7890</li>
+          </ul>
         </div>
-      </span>
-  </div>
-  <div class="third-section">
-    ©2023 by Bloom's Tea. Proudly created with Wix.com
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul class="help">
+                    <li>Help</li>
+                    <li>FAQ</li>
+                    <li>Shipping & Returns</li>
+                    <li>Store Policy</li>
+                  </ul>
+                </div>
+                <div class="col-lg-6">
+                  <ul class="followUs">
+                    <li>Follow Us</li>
+                    <li>Facebook</li>
+                    <li>Instagram</li>
+                    <li>Pinterest</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <form class="subscribeNow">
+                <div class="form-group">
+                  <label for="formGroupExampleInput">Subscribe Now</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Email address">
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-line">
+
+    </div>
+    <div class="third-section">
+      <span>©2023 by Bloom's Tea. Proudly created with Wix.com</span>
+    </div>
   </div>
 </footer>
