--- a/src/assets/sass/partials/_navbar.scss
+++ b/src/assets/sass/partials/_navbar.scss
@@ -1,70 +1,72 @@
 .topbar{
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 999;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  border-bottom: solid 2px $topBarBorderColor;
-  .nav-bar{
-    height: $nav-height;
+  .topbar-nav-bar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
     width: 100%;
-    width: calc(100% - 0px);
-    height: calc(100% - 0px);
-    white-space: nowrap;
-    overflow: visible;
-    position: relative;
-    padding-top: 24px;
-    &__lists{
-      list-style: none;
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      li{
-        width: 59px;
-        height: 50px;
-        position: relative;
-        -webkit-box-sizing: border-box;
-               box-sizing: border-box;
-        overflow: visible;
-      }
-    }
-  }
-  .nav-bar--left{
-    &__lists{
-      a{
-        text-decoration: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    border-bottom: solid 2px $topBarBorderColor;
+    .nav-bar{
+      height: $nav-height;
+      width: 100%;
+      width: calc(100% - 0px);
+      height: calc(100% - 0px);
+      white-space: nowrap;
+      overflow: visible;
+      position: relative;
+      padding-top: 24px;
+      &__lists{
+        list-style: none;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        li{
+          width: 59px;
+          height: 50px;
+          position: relative;
+          -webkit-box-sizing: border-box;
+                 box-sizing: border-box;
+          overflow: visible;
         }
-
-      p:hover {
-          color: gold;
-          -webkit-transition: 0.3s;
-          transition: 0.3s;
       }
     }
-    -webkit-box-flex: 2;
-        -ms-flex: 2;
-            flex: 2;
-  }
-  .nav-bar--center{
-    padding-left: 56px;
-    border-left: solid 2px $topBarBorderColor;
-    border-right: solid 2px $topBarBorderColor;
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-  }
-  .nav-bar--right{
-    -webkit-box-flex: 2;
-        -ms-flex: 2;
-            flex: 2;
-    padding-right: 20px;
-    &__lists{
-      -webkit-box-pack: end;
-          -ms-flex-pack: end;
-              justify-content: flex-end;
+    .nav-bar--left{
+      &__lists{
+        a{
+          text-decoration: none;
+          }
+
+        p:hover {
+            color: gold;
+            -webkit-transition: 0.3s;
+            transition: 0.3s;
+        }
+      }
+      -webkit-box-flex: 2;
+          -ms-flex: 2;
+              flex: 2;
+    }
+    .nav-bar--center{
+      padding-left: 56px;
+      border-left: solid 2px $topBarBorderColor;
+      border-right: solid 2px $topBarBorderColor;
+      -webkit-box-flex: 1;
+          -ms-flex: 1;
+              flex: 1;
+    }
+    .nav-bar--right{
+      -webkit-box-flex: 2;
+          -ms-flex: 2;
+              flex: 2;
+      padding-right: 20px;
+      &__lists{
+        -webkit-box-pack: end;
+            -ms-flex-pack: end;
+                justify-content: flex-end;
+      }
     }
   }
 }
